--- a/views/admin/admin-login/admin_login.ejs
+++ b/views/admin/admin-login/admin_login.ejs
@@ -55,7 +55,7 @@
                 <div class="login-form-box">
                     <h2>Login</h2>
                     
-                    <form action="login" method="POST">
+                    <form action="/submit-details" method="post" id="loginform">
 
                       
                     <div class="form-group">
