--- a/views/uheader.ejs
+++ b/views/uheader.ejs
@@ -55,7 +55,7 @@
                 <a class="dropdown-item" href="/change-password">
                   <i class="mdi mdi-lock-reset mr-2"></i> Change Password</a>
                  
-                <a class="dropdown-item" href="/signup">
+                <a class="dropdown-item" href="/Logout">
                   <i class="mdi mdi-power mr-2"></i> Logout </a>
               </div>
             </li>
@@ -103,7 +103,7 @@
             </a>
           </li>
             <li class="nav-item">
-              <a class="nav-link" href="/signup">
+              <a class="nav-link" href="/Logout">
                 <span class="menu-title">logout</span>
                 <i class="mdi mdi-logout menu-icon"></i>
               </a>
